cluster/apps/iot/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://ha.${CLUSTER_DOMAIN}"
    gethomepage.dev/group: IoT
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/icon: home-assistant.png
    gethomepage.dev/description: Home automation
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: kube-system
  hostnames:
    - "ha.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 80
